package com.arvatar.vortex.service;

import com.fasterxml.jackson.databind.ObjectMapper;
import org.springframework.stereotype.Service;
import voxel.dialogue.v1.DialogueServiceOuterClass.*;

@Service
public class DialogueService {

    /**
     * Get guru profile information
     */
    public GetGuruProfileResponse getGuruProfile(GetGuruProfileRequest request) {
        // TODO: Implement actual logic to fetch guru profile from database
        // This is a skeleton implementation
        
        GetGuruProfileResponse.Builder responseBuilder = GetGuruProfileResponse.newBuilder();
        
        // Add mock guru profile data - using the common types
        voxel.common.v1.Types.GuruProfile.Builder guruProfile = voxel.common.v1.Types.GuruProfile.newBuilder()
                .setGuruId(request.getGuruId())
                .setDisplayName("Sample Guru")
                .setBiography("A knowledgeable AI assistant")
                .addTags("helpful")
                .addTags("friendly")
                .setDefaultPointCloudVariant("neutral")
                .setUpdatedAt(com.google.protobuf.Timestamp.newBuilder()
                        .setSeconds(System.currentTimeMillis() / 1000)
                        .build());
        responseBuilder.setProfile(guruProfile.build());
        return responseBuilder.build();
    }

    /**
     * Process a question and return an answer chunk
     * Note: This is a simplified version for REST. The original gRPC service supports streaming
     */
    public AnswerChunk askQuestion(AskRequest request) {
        // TODO: Implement actual AI/ML logic to process questions
        // This is a skeleton implementation
        
        // Add mock answer chunk
        AnswerChunk.Builder answerChunk = AnswerChunk.newBuilder()
                .setTranscriptDelta("This is a mock response to: " + request.getUserQuery())
                .setIsFinal(true);
        
        return answerChunk.build();
    }
}
